<resources>
    <string name="app_name">My birthday organizer</string>


    <string name="app_heading">My birthday organizer</string>
    <string name="btn_my_friends_list">My Friends</string>
    <string name="btn_upcoming_birthdays">Upcoming birthdays</string>



    <string name="title_activity_my_friends">My friends</string>
    <string name="title_activity_add_person">Add Friend</string>
    <string name="title_activity_edit_person">Edit Friend</string>



    <string name="btn_ok_text">OK</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="btn_update_text">Update</string>
    <string name="btn_save_text">Save</string>
    <string name="btn_back_text">Back</string>

    <string name="btn_add_text">Add</string>
    <string name="btn_edit_text">Edit</string>
    <string name="btn_delete_text">Delete</string>


    <string name="txt_first_name">First name</string>
    <string name="txt_last_name">Last name</string>
    <string name="txt_phone_number">Phone number</string>
    <string name="txt_birth_date">Birth date</string>
    <string name="btn_open_date_picker">Birth date</string>


    <string name="info_add_person">Add a friend to your list</string>
    <string name="info_update_person">Update Information</string>



    <string name="action_add_person">Add</string>
    <string name="action_delete_person">Delete</string>
    <string name="action_update_person">Update</string>
    <string name="action_back">Back</string>


    <!-- Preference stuff-->
    <string name="action_settings">Settings</string>
    <string name="pref_sms_category_title">SMS settings</string>
    <string name="pref_sms_title">Greeting</string>
    <string name="pref_sms_summary">Birthday greeting message</string>

    <string name="pref_service_category_title">Service settings</string>
    <string name="pref_serivce_run_time">Time</string>
    <string name="pref_service_run_time_summary">Scheduled start time for SMS service</string>

    <string name="pref_service_start">Start</string>
    <string name="pref_service_start_summary">Start SMS scheduling service</string>
    <string name="pref_service_stop">Stop</string>
    <string name="pref_service_stop_summary">Stop SMS scheduling service</string>




    <string name="notification_title">Birthday greeting!</string>
    <string name="notification_text">Wishing your friend Happy Birthday</string>


    <string name="validation_error_firstname">Please enter a valid first name</string>
    <string name="validation_error_lastname">Please enter a valid last name</string>
    <string name="validation_error_phone">Please enter a valid phone number, 8 digits</string>

    <string name="alert_info">Confirm delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
