<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    tools:context="com.example.s198599.s198599_mappe2.fragments.CrudButtonFragment">


    <Button
        android:id="@+id/btn_add"
        style="@style/small_button_style"
        android:text="@string/btn_add_text"

        />
    <Button
        android:id="@+id/btn_edit"
        style="@style/small_button_style"
        android:text="@string/btn_edit_text"
        android:layout_toRightOf="@+id/btn_add"
        android:layout_marginLeft="2px"
        />
    <Button
        android:id="@+id/btn_delete"
        style="@style/small_button_style"
        android:text="@string/btn_delete_text"
        android:layout_toRightOf="@+id/btn_edit"
        android:layout_marginLeft="2px"
        />
    <Button
        android:id="@+id/btn_details"
        style="@style/small_button_style"
        android:text="@string/btn_details_text"
        android:layout_toRightOf="@+id/btn_delete"
        android:layout_marginLeft="2px"
        />

</RelativeLayout>
