<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_style"
    tools:context="com.example.s198599.s198599_mappe2.fragments.PersonRegistrationFragment">

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:columnCount="1"
        android:rowCount="11">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center_horizontal|center">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_first_name"
                android:layout_centerHorizontal="true"
                android:paddingTop="30dp"
                android:textColor="@color/text_color"
                />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_first_name"
                android:id="@+id/lbl_first_name"
                android:gravity="center"
                android:layout_below="@+id/edit_first_name"
                android:layout_centerHorizontal="true"
                android:textColor="@color/text_color_alt"
                android:textSize="10dp"
                />


            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_last_name"
                android:layout_below="@id/lbl_first_name"
                android:layout_centerHorizontal="true"
                android:paddingTop="30dp"
                android:textColor="@color/text_color"
                />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_last_name"
                android:id="@+id/lbl_last_name"
                android:layout_below="@+id/edit_last_name"
                android:layout_centerHorizontal="true"
                android:gravity="center|center_horizontal"
                android:textColor="@color/text_color_alt"
                android:textSize="10dp"
                />


            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_phone_number"
                android:layout_below="@+id/lbl_last_name"
                android:paddingTop="30dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/text_color"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_phone_number"
                android:id="@+id/lbl_phone_number"
                android:gravity="center|center_horizontal"
                android:layout_below="@+id/edit_phone_number"
                android:layout_centerHorizontal="true"
                android:textColor="@color/text_color_alt"
                android:textSize="10dp"
                />
        </RelativeLayout>
        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_picker"
            android:paddingBottom="20dp"
            android:calendarViewShown="false"
            android:layout_gravity="center_horizontal"
            android:layout_row="2">
        </DatePicker>

    </GridLayout>

</RelativeLayout>
